examples/test/testpolicy2106.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2106
  namespace: namespace456
spec:
  podSelector:
    matchLabels:
      key18: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value17
          key22: value39
      podSelector:
        matchLabels:
          key19: value16
          key12: value13
          key0: value25
